# docs/openapi.json
@@ -3648,6 +3648,24 @@
         "summary": "Readyz"
       }
     },
+    "/recordings/ui": {
+      "get": {
+        "operationId": "dashboard_recordings_ui_get",
+        "responses": {
+          "200": {
+            "content": {
+              "text/html": {
+                "schema": {
+                  "type": "string"
+                }
+              }
+            },
+            "description": "Successful Response"
+          }
+        },
+        "summary": "Dashboard"
+      }
+    },
     "/v1/actions/run": {
       "post": {
         "operationId": "run_v1_actions_run_post",
